Make application modular